# ImcSegmentationPipeline

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  ImcSegmentationPipeline.ipynb  LICENSE  README.md  Snakefile  config_pipeline.yml  environment.yml  helpers.py  ilastik.html  index.html  measurement.html  mkdocs.yml  output.html  prepro.html  preprocessing.ipynb  preprocessing.py  segmentation.html  setup.cfg
config/: config_pipeline.schema.yml  config_pipeline.yml  example_panel.csv
configuration_files/: 20170707_example_spillmat.csv  20170906_IMCexample_pannel.csv  201709_imctutorial.ipynb
cp2_pipelines/: 1_ilastik_preprocessing_v1.cpproj  2_segment_ilastik_v1.cpproj  3_measure_mask_v1.cpproj
cp3_pipelines/: 1_prepare_ilastik.cppipe  1_prepare_ilastik.cpproj  2_segment_ilastik.cppipe  2_segment_ilastik.cpproj  3_measure_mask_basic.cppipe  3_measure_mask_basic.cpproj  3_measure_mask_compensation.cppipe  3_measure_mask_compensation.cpproj
cp4_pipelines/: 1_prepare_ilastik.cppipe  2_segment_ilastik.cppipe  2_segment_ilastik_nucyt.cppipe  3_measure_mask_basic.cppipe  3_measure_mask_nucyt_basic.cppipe
docs/: cellprofiler.md  ilastik.md  index.md  measurement.md  output.md  prepro.md  segmentation.md
documentation/: 201709_imctools_guide.tex
envs/: env_imcsegpipe.yml  env_snakemake_imc.yml
manuscript/: imcsegmentationpipeline_documentation.tex
resources/: 20191128_HubMAP_panel.csv
rules/: cellprofiler.smk  ilastik.smk
scripts/: download_examples.ipynb  download_examples.py  imc_preprocessing.ipynb  (+1 more)
(+45 files in other folders)
