[metadata]
name = imcsegpipe
version = 1.0.0

[options]
zip_safe = True
install_requires = 
    imageio
    numpy
    pandas
    readimc
    scipy
    tifffile<2022.4.22
    xtiff
python_requires = >=3.8
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
