[metadata]
name = imcsegpipe
version = 1.0.0

[options]
zip_safe = True
install_requires = 
    imageio
    numpy
    pandas
    readimc
    scipy
    tifffile
    xtiff>=0.7.8
python_requires = >=3.8
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
